# ICEXVirtualTrajectory

./: CMakeLists.txt  README.md
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
resources/: ballerina.mtl  bb_frag.glsl  frustum_frag.glsl  frustum_vert.glsl  mirror_frag.glsl  mirror_vert.glsl  path.txt  simple_frag.glsl  simple_vert.glsl  tex_anchor_frag.glsl  tex_bb_frag.glsl  tex_floor_frag.glsl  tex_frag3.glsl  tex_frag4.glsl  tex_skybox_frag.glsl  tex_vert.glsl  tex_wreck_frag.glsl
src/: Anchor.h  BosPRMAlg.h  BoundingBox.h  CameraParser.cpp  CameraParser.h  Framebuffer.cpp  Framebuffer.hpp  Frustum.h  FrustumObj.h  GLSL.h  Image.cpp  Image.hpp  Obj.h  OglObject.hpp  Plane.h  Program.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  TextureKole.cpp  TextureKole.hpp  Utilities.cpp  Utilities.h  Voxel.h  camera.h  cameraInfo.txt  cameraInfoTemplate.txt  common.h  funcs.cpp  funcs.h  keys.txt  main.cpp  makingAnAnchor.txt  multiplePieceObjCode.txt  ray.h  stb_image.h
